Updating contact section for mobile

--- a/index.html
+++ b/index.html
@@ -156,21 +156,45 @@
               What I offer
             </h1>
             <div class="grid grid-cols-2 gap-10">
-              <div class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3">
+              <div
+                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
+              >
                 <h2 class="text-lg font-bold">Aware Tots</h2>
-                <img src="./assets/images/logo-white.png" alt="Class 1" class="w-20" />
+                <img
+                  src="./assets/images/logo-white.png"
+                  alt="Class 1"
+                  class="w-20"
+                />
               </div>
-              <div class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3">
+              <div
+                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
+              >
                 <h2 class="text-lg font-bold">Aware Kids</h2>
-                <img src="./assets/images/logo-white.png" alt="Class 2" class="w-20"/>
+                <img
+                  src="./assets/images/logo-white.png"
+                  alt="Class 2"
+                  class="w-20"
+                />
               </div>
-              <div class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3">
+              <div
+                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
+              >
                 <h2 class="text-lg font-bold">Aware Teens</h2>
-                <img src="./assets/images/logo-white.png" alt="Class 3" class="w-20"/>
+                <img
+                  src="./assets/images/logo-white.png"
+                  alt="Class 3"
+                  class="w-20"
+                />
               </div>
-              <div class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3">
+              <div
+                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
+              >
                 <h2 class="text-lg font-bold">Aware Adults</h2>
-                <img src="./assets/images/logo-white.png" alt="Class 4" class="w-20"/>
+                <img
+                  src="./assets/images/logo-white.png"
+                  alt="Class 4"
+                  class="w-20"
+                />
               </div>
             </div>
           </div>
@@ -186,12 +210,38 @@
             <h1 class="text-xl md:text-4xl lg:text-6xl font-bold">
               Get In Touch
             </h1>
-            <div class="flex flex-col space-y-5 items-center">
-              <input placeholder="Enter Your Name" class="w-10/12 p-2">
-              <input placeholder="Enter Your Email" class="w-10/12 p-2">
-              <textarea placeholder="Write Your Message" class="w-10/12 p-2"></textarea>
-              <button class="border-2 border-color-primary rounded-xl p-2 font-medium">Submit</button>
+            <div
+              class="space-y-5 flex flex-col text-center font-bold py-8 "
+            >
+              <div class="space-y-2">
+                <i class="fa-solid fa-phone text-xl"></i>
+                <p class="text-sm">07739 660091</p>
+              </div>
+              <div class="space-y-2">
+                <i class="fa-regular fa-envelope text-xl"></i>
+                <p class="text-sm">happymindsgratefulhearts@gmail.com</p>
+              </div>
+              <div class="space-y-2">
+                <i class="fa-solid fa-location-dot text-xl"></i>
+                <p class="text-sm px-2">
+                  Well-being Hub NI, The Station House, 16a Derganagh Road, BT45
+                  8PS
+                </p>
+              </div>
             </div>
+            <div class="flex flex-col space-y-5 items-center">
+              <input placeholder="Enter Your Name" class="w-10/12 p-2" />
+              <input placeholder="Enter Your Email" class="w-10/12 p-2" />
+              <textarea
+                placeholder="Write Your Message"
+                class="w-10/12 p-2"
+              ></textarea>
+            </div>
+            <button
+              class="border-2 border-color-primary rounded-xl p-2 font-medium w-28 ml-6"
+            >
+              Submit
+            </button>
           </div>
         </div>
       </section>
