Adding new images, and updating format for classes section

--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
             alt="Profile Image"
             class="w-32 md:w-72 rounded-xl"
           />
-          <h1 class="text-xl lg:text-6xl xl:text-7xl font-bold">
+          <h1
+            class="text-xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold"
+          >
             Holistic Practitioner & Trainee Holistic Psychotherapist
           </h1>
-          <p class="text-md lg:text-5xl font-semibold">
+          <p class="text-md sm:text-2xl md:text-4xl lg:text-5xl font-semibold">
             Mindfulness | Meditation | Breathwork
           </p>
           <div class="text-sm space-x-3 md:space-x-5 md:text-3xl">
@@ -127,27 +129,31 @@
       </section>
       <section id="about">
         <div
-          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-28"
+          class="container md:py-20 mt-10 flex flex-col items-center text-center mb-20"
         >
           <div
-            class="flex flex-col py-10 space-y-5 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80"
+            class="flex flex-col py-5 space-y-5 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80"
           >
-            <h1 class="text-2xl md:text-4xl lg:text-6xl font-bold">My Story</h1>
+            <img
+              src="./assets/images/My-Story.png"
+              alt="My Story"
+              class="w-44 rounded-xl"
+            />
             <img
               src="./assets/images/profile-img.png"
               alt="Profile picture"
-              class="w-28 rounded-xl"
+              class="w-32 "
             />
-            <p class="text-justify px-6">
+            <p class="text-left px-6 font-medium">
               My name is Amanda, I am a mum of 10 wonderful children. I am a
-              minfullness instructor from Gulladuff, who teaches breathwork.
+              mindfullness instructor from Gulladuff, who teaches breathwork.
             </p>
           </div>
         </div>
       </section>
       <section id="services">
         <div
-          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-28"
+          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
         >
           <div
             class="flex flex-col py-10 px-3 space-y-10 bg-color-secondary border-2 border-color-primary rounded-2xl w-80"
@@ -156,46 +162,26 @@
               What I offer
             </h1>
             <div class="grid grid-cols-2 gap-10">
-              <div
-                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
-              >
-                <h2 class="text-lg font-bold">Aware Tots</h2>
-                <img
-                  src="./assets/images/logo-white.png"
-                  alt="Class 1"
-                  class="w-20"
-                />
-              </div>
-              <div
-                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
-              >
-                <h2 class="text-lg font-bold">Aware Kids</h2>
-                <img
-                  src="./assets/images/logo-white.png"
-                  alt="Class 2"
-                  class="w-20"
-                />
-              </div>
-              <div
-                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
-              >
-                <h2 class="text-lg font-bold">Aware Teens</h2>
-                <img
-                  src="./assets/images/logo-white.png"
-                  alt="Class 3"
-                  class="w-20"
-                />
-              </div>
-              <div
-                class="border-2 border-color-primary rounded-2xl items-center flex flex-col space-y-4 p-3"
-              >
-                <h2 class="text-lg font-bold">Aware Adults</h2>
-                <img
-                  src="./assets/images/logo-white.png"
-                  alt="Class 4"
-                  class="w-20"
-                />
-              </div>
+              <img
+                src="./assets/images/Aware-Tots.png"
+                alt="Class 1"
+                class="w-64 hover:scale-105"
+              />
+              <img
+                src="./assets/images/Aware-Kids.png"
+                alt="Class 2"
+                class="w-64 hover:scale-105"
+              />
+              <img
+                src="./assets/images/Aware-Teens.png"
+                alt="Class 3"
+                class="w-64 hover:scale-105"
+              />
+              <img
+                src="./assets/images/Adult-Group.png"
+                alt="Class 4"
+                class="w-64 hover:scale-105"
+              />
             </div>
           </div>
         </div>
@@ -207,22 +193,20 @@
           <div
             class="flex flex-col py-10 space-y-5 bg-color-secondary border-2 border-color-primary rounded-2xl w-80"
           >
-            <h1 class="text-xl md:text-4xl lg:text-6xl font-bold">
+            <h1 class="text-2xl md:text-4xl lg:text-6xl font-bold">
               Get In Touch
             </h1>
-            <div
-              class="space-y-5 flex flex-col text-center font-bold py-8 "
-            >
+            <div class="space-y-6 flex flex-col text-center font-bold py-8">
               <div class="space-y-2">
-                <i class="fa-solid fa-phone text-xl"></i>
+                <i class="fa-solid fa-phone text-3xl text-color-third"></i>
                 <p class="text-sm">07739 660091</p>
               </div>
               <div class="space-y-2">
-                <i class="fa-regular fa-envelope text-xl"></i>
+                <i class="fa-regular fa-envelope text-3xl text-color-third"></i>
                 <p class="text-sm">happymindsgratefulhearts@gmail.com</p>
               </div>
               <div class="space-y-2">
-                <i class="fa-solid fa-location-dot text-xl"></i>
+                <i class="fa-solid fa-location-dot text-3xl text-color-third"></i>
                 <p class="text-sm px-2">
                   Well-being Hub NI, The Station House, 16a Derganagh Road, BT45
                   8PS
@@ -230,11 +214,11 @@
               </div>
             </div>
             <div class="flex flex-col space-y-5 items-center">
-              <input placeholder="Enter Your Name" class="w-10/12 p-2" />
-              <input placeholder="Enter Your Email" class="w-10/12 p-2" />
+              <input placeholder="Enter Your Name" class="w-10/12 p-2 text-black" />
+              <input placeholder="Enter Your Email" class="w-10/12 p-2 text-black" />
               <textarea
                 placeholder="Write Your Message"
-                class="w-10/12 p-2"
+                class="w-10/12 h-28 p-2 text-black"
               ></textarea>
             </div>
             <button
