--- a/index.html
+++ b/index.html
@@ -239,9 +239,11 @@
         if (window.scrollY > 100) {
           navbar.classList.add('bg-color-secondary');
           navbar.classList.add('border-b');
+          navbar.classList.add('mb-10');
         } else {
           navbar.classList.remove('bg-color-secondary');
           navbar.classList.remove('border-b');
+          navbar.classList.add('mb-10');
         }
       }
 
