--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           class="container md:py-20 mt-10 flex flex-col items-center text-center mb-20"
         >
           <div
-            class="flex flex-col py-5 space-y-5 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+            class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
           >
             <img
               src="./assets/images/My-Story.png"
@@ -146,12 +146,17 @@
             <img
               src="./assets/images/profile-img.png"
               alt="Profile picture"
-              class="w-32 md:w-56"
+              class="w-32 md:w-56 rounded-xl"
             />
-            <p class="text-left px-6 font-medium">
-              My name is Amanda, I am a mum of 10 wonderful children. I am a
-              mindfullness instructor from Gulladuff, who teaches breathwork.
+            <p
+              class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+            >
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
             </p>
+            <a href="#about" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
@@ -165,34 +170,35 @@
             <h1 class="text-2xl md:text-4xl lg:text-6xl font-bold">
               What I offer
             </h1>
-            <div class="grid grid-cols-2 gap-10">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-10">
               <img
                 src="./assets/images/Aware-Tots.png"
                 alt="Class 1"
-                class="w-64 hover:scale-105"
+                class="w-64 hover:scale-105 cursor-pointer"
               />
               <img
                 src="./assets/images/Aware-Kids.png"
                 alt="Class 2"
-                class="w-64 hover:scale-105"
+                class="w-64 hover:scale-105 cursor-pointer"
               />
               <img
                 src="./assets/images/Aware-Teens.png"
                 alt="Class 3"
-                class="w-64 hover:scale-105"
+                class="w-64 hover:scale-105 cursor-pointer"
               />
               <img
                 src="./assets/images/Adult-Group.png"
                 alt="Class 4"
-                class="w-64 hover:scale-105"
+                class="w-64 hover:scale-105 cursor-pointer"
               />
             </div>
+            <a href="#services" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
       <section id="reviews">
         <div
-          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-28"
+          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
         >
           <div
             class="flex flex-col py-10 space-y-5 bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12 items-center"
@@ -203,7 +209,7 @@
               class="w-44 md:w-64 rounded-xl"
             />
             <div class="grid gap-6 lg:grid-cols-2 md:gap-20 md:mx-8">
-              <div class="space-y-3 p-3">
+              <div class="space-y-3 px-4">
                 <i
                   class="fa-solid fa-quote-left md:text-3xl text-color-third"
                 ></i>
@@ -215,7 +221,7 @@
                 </p>
                 <p class="md:text-xl">- Person 1</p>
               </div>
-              <div class="space-y-3 p-3">
+              <div class="space-y-3 px-4">
                 <i
                   class="fa-solid fa-quote-left md:text-3xl text-color-third"
                 ></i>
@@ -227,37 +233,14 @@
                 </p>
                 <p class="md:text-xl">- Person 2</p>
               </div>
-              <div class="space-y-3 p-3">
-                <i
-                  class="fa-solid fa-quote-left md:text-3xl text-color-third"
-                ></i>
-                <p class="md:text-2xl font-semibold">
-                  "Working with Amanda has been nothing short of amazing. She is
-                  an underatated professional, who is absolutely superb at what
-                  she does. After coming back from Splash and Amanda's
-                  breathwork class, I felt completely relaxed."
-                </p>
-                <p class="md:text-xl">- Person 3</p>
-              </div>
-              <div class="space-y-3 p-3">
-                <i
-                  class="fa-solid fa-quote-left md:text-3xl text-color-third"
-                ></i>
-                <p class="md:text-2xl font-semibold">
-                  "Working with Amanda has been nothing short of amazing. She is
-                  an underatated professional, who is absolutely superb at what
-                  she does. After coming back from Splash and Amanda's
-                  breathwork class, I felt completely relaxed."
-                </p>
-                <p class="md:text-xl">- Person 4</p>
-              </div>
             </div>
+            <a href="#reviews" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
       <section id="contact">
         <div
-          class="container md:py-20 mt-5 flex flex-col items-center text-center mb-28"
+          class="container md:py-20 flex flex-col items-center text-center mb-28"
         >
           <div
             class="flex flex-col py-10 space-y-5 bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
@@ -265,26 +248,26 @@
             <h1 class="text-2xl md:text-4xl lg:text-6xl font-bold">
               Get In Touch
             </h1>
-            <div class="space-y-6 flex flex-col text-center font-bold py-8">
-              <div class="space-y-2">
-                <i class="fa-solid fa-phone text-3xl text-color-third"></i>
-                <p class="text-sm">07739 660091</p>
+            <div class="space-y-8 font-bold py-8 lg:px-20">
+              <div class="flex flex-col space-y-4">
+                <i class="fa-solid fa-phone md:text-3xl text-color-third"></i>
+                <p class="text-sm md:text-xl lg:text-2xl">07739 660091</p>
               </div>
-              <div class="space-y-2">
-                <i class="fa-regular fa-envelope text-3xl text-color-third"></i>
-                <p class="text-sm">happymindsgratefulhearts@gmail.com</p>
+              <div class="flex flex-col space-y-4">
+                <i class="fa-regular fa-envelope md:text-3xl text-color-third"></i>
+                <p class="text-sm md:text-xl lg:text-2xl">happymindsgratefulhearts@gmail.com</p>
               </div>
-              <div class="space-y-2">
+              <div class="flex flex-col space-y-4">
                 <i
-                  class="fa-solid fa-location-dot text-3xl text-color-third"
+                  class="fa-solid fa-location-dot md:text-3xl text-color-third"
                 ></i>
-                <p class="text-sm px-2">
+                <p class="text-sm md:text-xl lg:text-2xl px-3">
                   Well-being Hub NI, The Station House, 16a Derganagh Road, BT45
                   8PS
                 </p>
               </div>
             </div>
-            <div class="flex flex-col space-y-5 items-center">
+            <div class="flex flex-col space-y-5 lg:space-y-10 items-center">
               <input
                 placeholder="Enter Your Name"
                 class="w-10/12 p-2 text-black"
@@ -297,12 +280,12 @@
                 placeholder="Write Your Message"
                 class="w-10/12 h-28 p-2 text-black"
               ></textarea>
+              <button
+                class="border-2 border-color-primary rounded-xl p-2 font-medium w-28 md:w-40"
+              >
+                Submit
+              </button>
             </div>
-            <button
-              class="border-2 border-color-primary rounded-xl p-2 font-medium w-28 ml-6"
-            >
-              Submit
-            </button>
           </div>
         </div>
       </section>
