--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div>
           <ul class="hidden xl:flex items-center space-x-9 text-xl font-bold">
             <li class="hover:scale-110">
-              <a href="#about" class="hover:underline">About</a>
+              <a href="./about.html" class="hover:underline">About</a>
             </li>
             <li class="hover:scale-110">
-              <a href="#services" class="hover:underline">Services</a>
+              <a href="./services.html" class="hover:underline">Services</a>
             </li>
             <li class="hover:scale-110">
-              <a href="#reviews" class="hover:underline">Reviews</a>
+              <a href="./reviews.html" class="hover:underline">Reviews</a>
             </li>
             <li class="hover:scale-110">
-              <a href="#contact" class="hover:underline">Contact Me</a>
+              <a href="./contact.html" class="hover:underline">Contact Me</a>
             </li>
             <li>
               <button
@@ -63,20 +63,22 @@
         >
           <ul class="h-full grid place-items-center py-16 text-xl font-bold">
             <li class="hover:scale-110">
-              <a id="hLink" href="#about" class="hover:hover:scale-110"
+              <a id="hLink" href="./about.html" class="hover:hover:scale-110"
                 >About</a
               >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="#services" class="hover:hover:scale-110"
+              <a id="hLink" href="./services.html" class="hover:hover:scale-110"
                 >Services</a
               >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="#reviews" class="hover:scale-110">Reviews</a>
+              <a id="hLink" href="./reviews.html" class="hover:scale-110"
+                >Reviews</a
+              >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="#contact" class="hover:hover:scale-110"
+              <a id="hLink" href="./contact.html" class="hover:hover:scale-110"
                 >Contact Me</a
               >
             </li>
@@ -126,7 +128,7 @@
             <button
               class="px-6 py-3 rounded-2xl font-bold hover:scale-105 border-2 border-color-primary"
             >
-              Let's Connect
+              <a href="./contact.html">Let's Connect</a>
             </button>
           </div>
         </div>
@@ -156,7 +158,7 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="#about" class="hover:font-bold">Read more...</a>
+            <a href="./about.html" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
@@ -192,7 +194,7 @@
                 class="w-64 hover:scale-105 cursor-pointer"
               />
             </div>
-            <a href="#services" class="hover:font-bold">Read more...</a>
+            <a href="./services.html" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
@@ -234,7 +236,7 @@
                 <p class="md:text-xl">- Person 2</p>
               </div>
             </div>
-            <a href="#reviews" class="hover:font-bold">Read more...</a>
+            <a href="./reviews.html" class="hover:font-bold">Read more...</a>
           </div>
         </div>
       </section>
@@ -254,8 +256,12 @@
                 <p class="text-sm md:text-xl lg:text-2xl">07739 660091</p>
               </div>
               <div class="flex flex-col space-y-4">
-                <i class="fa-regular fa-envelope md:text-3xl text-color-third"></i>
-                <p class="text-sm md:text-xl lg:text-2xl">happymindsgratefulhearts@gmail.com</p>
+                <i
+                  class="fa-regular fa-envelope md:text-3xl text-color-third"
+                ></i>
+                <p class="text-sm md:text-xl lg:text-2xl">
+                  happymindsgratefulhearts@gmail.com
+                </p>
               </div>
               <div class="flex flex-col space-y-4">
                 <i
