Adding copyright to footer

--- a/index.html
+++ b/index.html
@@ -295,6 +295,18 @@
           </div>
         </div>
       </section>
+      <section id="footer">
+        <div class="relative">
+          <div class="container py-5">
+            <div class="flex flex-col justify-center text-center">
+              <p class="font-medium">
+                Copyright &copy; 2024 Happy Minds Grateful Hearts. |
+                Developed By Luke O'Kane.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script>
