--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
           <div class="container py-5">
             <div class="flex flex-col justify-center text-center">
               <p class="font-medium">
-                Copyright &copy; 2024 Happy Minds Grateful Hearts. |
-                Developed By Luke O'Kane.
+                Copyright &copy; 2024 Happy Minds Grateful Hearts. | Developed
+                By <span class="text-color-third">Luke O'Kane.</span>
               </p>
             </div>
           </div>
