--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
     <section id="contact">
       <div
-        class="container md:py-20 flex flex-col items-center text-center mb-28 mt-12"
+        class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
       >
         <div
           class="flex flex-col py-10 space-y-5 bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
