Adding footer to each page

--- a/services.html
+++ b/services.html
@@ -139,6 +139,19 @@
       </div>
     </section>
 
+    <section id="footer">
+      <div class="relative">
+        <div class="container py-5">
+          <div class="flex flex-col justify-center text-center">
+            <p class="font-medium">
+              Copyright &copy; 2024 Happy Minds Grateful Hearts. | Developed
+              By <span class="text-color-third">Luke O'Kane.</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script>
       // Making navbar sticky
       const navbar = document.querySelector("header");
