Adding different pages for additional services

--- a/index.html
+++ b/index.html
@@ -193,6 +193,27 @@
                 alt="Class 4"
                 class="w-64 hover:scale-105 cursor-pointer"
               />
+              <a href="./one2one.html">
+                <img
+                  src="./assets/images/one2one.png"
+                  alt="Class 4"
+                  class="w-64 hover:scale-105 cursor-pointer"
+                />
+              </a>
+              <a href="./retreats.html">
+                <img
+                  src="./assets/images/retreats.png"
+                  alt="Class 4"
+                  class="w-64 hover:scale-105 cursor-pointer"
+                />
+              </a>
+              <a href="./workshops.html">
+                <img
+                  src="./assets/images/workshops.png"
+                  alt="Class 4"
+                  class="w-64 hover:scale-105 cursor-pointer"
+                />
+              </a>
             </div>
             <a href="./services.html" class="hover:font-bold">Read more...</a>
           </div>
