--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services</title>
+    <title>Classes</title>
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
@@ -30,7 +30,7 @@
               <a href="./about.html" class="hover:underline">About</a>
             </li>
             <li class="hover:scale-110">
-              <a href="./services.html" class="hover:underline">Services</a>
+              <a href="./classes.html" class="hover:underline">Services</a>
             </li>
             <li class="hover:scale-110">
               <a href="./reviews.html" class="hover:underline">Reviews</a>
@@ -73,7 +73,7 @@
               >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="./services.html" class="hover:hover:scale-110"
+              <a id="hLink" href="./classes.html" class="hover:hover:scale-110"
                 >Services</a
               >
             </li>
@@ -103,7 +103,7 @@
       </nav>
     </header>
 
-    <section id="services">
+    <section id="classes">
       <div
         class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
       >
