--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="./about.html" class="hover:underline">About</a>
             </li>
             <li class="hover:scale-110">
-              <a href="./services.html" class="hover:underline">Services</a>
+              <a href="./classes.html" class="hover:underline">Services</a>
             </li>
             <li class="hover:scale-110">
               <a href="./reviews.html" class="hover:underline">Reviews</a>
@@ -68,7 +68,7 @@
               >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="./services.html" class="hover:hover:scale-110"
+              <a id="hLink" href="./classes.html" class="hover:hover:scale-110"
                 >Services</a
               >
             </li>
@@ -173,26 +173,6 @@
               What I offer
             </h1>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-10">
-              <img
-                src="./assets/images/Aware-Tots.png"
-                alt="Class 1"
-                class="w-64 hover:scale-105 cursor-pointer"
-              />
-              <img
-                src="./assets/images/Aware-Kids.png"
-                alt="Class 2"
-                class="w-64 hover:scale-105 cursor-pointer"
-              />
-              <img
-                src="./assets/images/Aware-Teens.png"
-                alt="Class 3"
-                class="w-64 hover:scale-105 cursor-pointer"
-              />
-              <img
-                src="./assets/images/Adult-Group.png"
-                alt="Class 4"
-                class="w-64 hover:scale-105 cursor-pointer"
-              />
               <a href="./one2one.html">
                 <img
                   src="./assets/images/one2one.png"
@@ -215,7 +195,7 @@
                 />
               </a>
             </div>
-            <a href="./services.html" class="hover:font-bold">Read more...</a>
+            <a href="./classes.html" class="hover:font-bold">View all classes...</a>
           </div>
         </div>
       </section>
