--- a/workshops.html
+++ b/workshops.html
@@ -30,7 +30,7 @@
               <a href="./about.html" class="hover:underline">About</a>
             </li>
             <li class="hover:scale-110">
-              <a href="./services.html" class="hover:underline">Services</a>
+              <a href="./classes.html" class="hover:underline">Services</a>
             </li>
             <li class="hover:scale-110">
               <a href="./reviews.html" class="hover:underline">Reviews</a>
@@ -73,7 +73,7 @@
               >
             </li>
             <li class="hover:scale-110">
-              <a id="hLink" href="./services.html" class="hover:hover:scale-110"
+              <a id="hLink" href="./classes.html" class="hover:hover:scale-110"
                 >Services</a
               >
             </li>
